@@ -1,3 +1,7 @@
+2001-03-12  Keisuke Nishida  <kxn30@po.cwru.edu>
+
+	* guile-c.el (guile-c-deprecate-region): New command.
+
 2001-03-11  Keisuke Nishida  <kxn30@po.cwru.edu>
 
 	* guile-c.el: New file.
